tests/ui/invalid_type.stderr
error: Expected one of u1, u2, u3, u4, u5, u6, and u7
 --> tests/ui/invalid_type.rs:6:21
  |
6 |             field0: u8,
  |                     ^^
